--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'iconfont';  /* project id 718575 */
-    src: url('//at.alicdn.com/t/font_718575_qdkrhkbkl9.eot');
-    src: url('//at.alicdn.com/t/font_718575_qdkrhkbkl9.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_718575_qdkrhkbkl9.woff') format('woff'),
-    url('//at.alicdn.com/t/font_718575_qdkrhkbkl9.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_718575_qdkrhkbkl9.svg#iconfont') format('svg');
+  font-family: 'iconfont';  /* project id 786965 */
+  src: url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.eot');
+  src: url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.woff') format('woff'),
+  url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.svg#iconfont') format('svg');
 }
 
 .iconfont{
@@ -14,6 +14,14 @@
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-svg{
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
 #app {
     background: #eee;
 }
@@ -31,6 +39,12 @@
     margin-right: .5em;
     color: #888;
     -webkit-user-select: none;
+}
+
+.inlineCode {
+    background: rgb(205, 240, 243);
+    padding:2px 5px 2px 5px;
+    border-radius: 4px;
 }
 
 .sidebarMenu .ant-dropdown-menu-item {
