--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 786965 */
-  src: url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.eot');
-  src: url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.woff') format('woff'),
-  url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_786965_uf2ejonu9q9.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_786965_3vmbogy1t11.eot');
+  src: url('//at.alicdn.com/t/font_786965_3vmbogy1t11.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_786965_3vmbogy1t11.woff') format('woff'),
+  url('//at.alicdn.com/t/font_786965_3vmbogy1t11.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_786965_3vmbogy1t11.svg#iconfont') format('svg');
 }
 
 .iconfont{
@@ -49,4 +49,37 @@
 
 .sidebarMenu .ant-dropdown-menu-item {
     font-size: 12px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-top: 1px solid #e6e6e6;
+}
+
+table tr {
+    border: none;
+    border-bottom: 1px solid #e6e6e6;
+    border-right: 1px solid #e6e6e6;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+table tr:first-child {
+    background: #f5f5f5;
+    font-weight: bold;
+}
+
+table td {
+    border: 1px solid #e6e6e6;
+    border-top: none;
+    border-bottom: none;
+    border-right: none;
+    flex: 1;
+    word-break: break-all;
+}
+
+.tableButton {
+    padding: 0 0 10px 0;
 }
